services/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
    kubia-headless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
